# scanner

./: .gitignore  .gitmodules  CMakeLists.txt  pull.sh
app/: CMakeLists.txt  main.cpp
app/common/: CMakeLists.txt  ipc-shm.c  ipc.h  proc-list.h  utils.c  utils.h
app/hook/: hook-common.c  hook-common.h  hook-gdk-screenshot.c  hook-ld_preload.c  hook-main.c
app/pf/: data-base.cc  data-base.h  gen-event.cc  gen-event.h  general-setting.cc  general-setting.h  glog.c  glog.h  ipc.cc  ipc.h  log.c  log.h  policy-base.cpp  policy-base.h  policy-filter.cc  policy-filter.h  proc-inject.c  proc-inject.cc  proc-inject.h  qlog.cpp  qlog.h  task-base.cpp  task-base.h  task-manager.cpp  task-manager.h  utils.cc  utils.h
common/: CMakeLists.txt  ipc-shm.c  ipc-shm.h  ipc.h  proc-list.c  utils-ipc.c  utils-ipc.h  utils.c
doc/: readme.md  todo.md
hook/: CMakeLists.txt  hook-common.h  hook-dbus.c
sql/: scan-task.sql
test/: CMakeLists.txt  test-utils.cc
tools/: CMakeLists.txt  parse-policy.cc  rule-id.cc  show-result.cc  show-task.cc
